--- a/Client/package.json
+++ b/Client/package.json
@@ -7,34 +7,50 @@
     "web": "expo start --web",
     "eject": "expo eject"
   },
-  "jest": {
-    "preset": "jest-expo"
-  },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
+    "@hapi/hoek": "^9.0.4",
     "@react-native-community/masked-view": "^0.1.7",
-    "@react-navigation/bottom-tabs": "^5.1.1",
-    "@react-navigation/drawer": "^5.1.1",
-    "@react-navigation/native": "^5.0.9",
-    "@react-navigation/stack": "^5.1.1",
-    "expo": "~36.0.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "@react-navigation/bottom-tabs": "^5.2.4",
+    "@react-navigation/drawer": "^5.3.4",
+    "@react-navigation/native": "^5.1.3",
+    "@react-navigation/stack": "^5.2.8",
+    "accordion-collapse-react-native": "^0.2.8",
+    "expo": "^36.0.2",
+    "expo-app-auth": "^8.0.0",
+    "expo-asset": "~8.0.0",
+    "expo-camera": "^8.2.0",
+    "expo-facebook": "^8.1.0",
+    "expo-google-app-auth": "^8.1.0",
+    "expo-linear-gradient": "^8.1.0",
+    "firebase": "^7.13.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-animatable": "^1.3.3",
+    "react-native-barcode-mask": "^1.1.0",
+    "react-native-calendars": "^1.264.0",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.6.0",
-    "react-native-reanimated": "^1.7.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-swiper": "0.0.8",
+    "react-native-maps": "^0.27.1",
+    "react-native-phone-call": "^1.0.9",
+    "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.2.0",
+    "react-native-screens": "^2.4.0",
+    "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-svg": "^12.0.3",
     "react-native-swipeout": "^2.3.6",
-    "react-native-web": "^0.12.2",
+    "react-native-view-more-text": "^2.1.0",
+    "react-native-web": "^0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.0.0",
-    "@babel/core": "^7.8.7"
+    "@babel/core": "^7.9.0",
+    "babel-preset-expo": "^8.0.0"
   },
   "private": true
 }
