--- a/Client/package.json
+++ b/Client/package.json
@@ -22,7 +22,6 @@
     "expo-camera": "^8.2.0",
     "expo-facebook": "^8.1.0",
     "expo-google-app-auth": "^8.1.0",
-    "expo-linear-gradient": "^8.1.0",
     "firebase": "^7.13.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -33,6 +32,7 @@
     "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-gradient-buttons": "^2.0.1",
     "react-native-image-swiper": "0.0.8",
     "react-native-maps": "^0.27.1",
     "react-native-phone-call": "^1.0.9",
