--- a/Server/package.json
+++ b/Server/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.6"
+    "express-fileupload": "^1.1.6",
+    "pg": "^8.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
