--- a/Client/package.json
+++ b/Client/package.json
@@ -22,7 +22,8 @@
     "expo-camera": "^8.2.0",
     "expo-facebook": "^8.1.0",
     "expo-google-app-auth": "^8.1.0",
-    "firebase": "^7.13.1",
+    "firebase": "^7.14.0",
+    "native-base": "2.13.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
