--- a/Client/package.json
+++ b/Client/package.json
@@ -51,7 +51,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "babel-preset-expo": "^8.0.0"
+    "babel-preset-expo": "^8.0.0",
+    "shortid": "^2.2.15"
   },
   "private": true
 }
