--- a/Client/package.json
+++ b/Client/package.json
@@ -27,6 +27,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-24h-timepicker": "^1.1.0",
     "react-native-animatable": "^1.3.3",
     "react-native-barcode-mask": "^1.1.0",
     "react-native-calendars": "^1.264.0",
@@ -37,6 +38,7 @@
     "react-native-image-swiper": "0.0.8",
     "react-native-maps": "^0.27.1",
     "react-native-phone-call": "^1.0.9",
+    "react-native-picker-select": "^7.0.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
@@ -47,7 +49,10 @@
     "react-native-web": "^0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-image-picker": "~8.0.1",
+    "expo-constants": "~8.0.0",
+    "expo-permissions": "~8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
