--- a/Client/package.json
+++ b/Client/package.json
@@ -20,8 +20,11 @@
     "expo-app-auth": "^8.0.0",
     "expo-asset": "~8.0.0",
     "expo-camera": "^8.2.0",
+    "expo-constants": "~8.0.0",
     "expo-facebook": "^8.1.0",
     "expo-google-app-auth": "^8.1.0",
+    "expo-image-picker": "~8.0.1",
+    "expo-permissions": "~8.0.0",
     "firebase": "^7.14.0",
     "native-base": "2.13.8",
     "react": "^16.9.0",
@@ -37,6 +40,7 @@
     "react-native-gradient-buttons": "^2.0.1",
     "react-native-image-swiper": "0.0.8",
     "react-native-maps": "^0.27.1",
+    "react-native-multiple-select": "^0.5.5",
     "react-native-phone-call": "^1.0.9",
     "react-native-picker-select": "^7.0.0",
     "react-native-reanimated": "^1.7.1",
@@ -49,10 +53,7 @@
     "react-native-web": "^0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "expo-image-picker": "~8.0.1",
-    "expo-constants": "~8.0.0",
-    "expo-permissions": "~8.0.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
