New order and many more
Create new order, More redux states and more...

--- a/Client/package.json
+++ b/Client/package.json
@@ -26,6 +26,7 @@
     "expo-image-picker": "~8.0.1",
     "expo-permissions": "~8.0.0",
     "firebase": "^7.14.0",
+    "moment": "^2.24.0",
     "native-base": "2.13.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
