--- a/Client/package.json
+++ b/Client/package.json
@@ -40,6 +40,7 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-gradient-buttons": "^2.0.1",
     "react-native-image-swiper": "0.0.8",
+    "react-native-map-link": "^2.7.8",
     "react-native-maps": "^0.27.1",
     "react-native-multiple-select": "^0.5.5",
     "react-native-phone-call": "^1.0.9",
