--- a/Client/package.json
+++ b/Client/package.json
@@ -55,7 +55,8 @@
     "react-native-web": "^0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-location": "~8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
