--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "expo-facebook": "^8.1.0",
     "expo-google-app-auth": "^8.1.0",
     "expo-image-picker": "~8.0.1",
+    "expo-location": "~8.0.0",
     "expo-permissions": "~8.0.0",
     "firebase": "^7.14.0",
     "moment": "^2.24.0",
@@ -42,6 +43,7 @@
     "react-native-image-swiper": "0.0.8",
     "react-native-map-link": "^2.7.8",
     "react-native-maps": "^0.27.1",
+    "react-native-material-menu": "^1.1.3",
     "react-native-multiple-select": "^0.5.5",
     "react-native-phone-call": "^1.0.9",
     "react-native-picker-select": "^7.0.0",
@@ -55,8 +57,7 @@
     "react-native-web": "^0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "expo-location": "~8.0.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
