--- a/Client/package.json
+++ b/Client/package.json
@@ -37,6 +37,7 @@
     "react-native-barcode-mask": "^1.1.0",
     "react-native-calendars": "^1.264.0",
     "react-native-credit-card-input": "^0.4.1",
+    "react-native-customer-review-bars": "^1.0.7",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-gradient-buttons": "^2.0.1",
