--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,8 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
     "mathjs": "^6.6.4",
+    "moment": "^2.25.3",
+    "moment-range": "^4.0.2",
     "pg": "^8.0.3",
     "radians": "^1.0.0"
   },
