--- a/Client/package.json
+++ b/Client/package.json
@@ -53,6 +53,7 @@
     "react-native-screens": "^2.4.0",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-svg": "^12.0.3",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-view-more-text": "^2.1.0",
     "react-native-web": "^0.11.7",
