Fixed dependencies and implemented the Insights screen properly

--- a/Client/package.json
+++ b/Client/package.json
@@ -38,7 +38,7 @@
     "react-native-calendars": "^1.264.0",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-customer-review-bars": "^1.0.7",
-    "react-native-elements": "^1.2.7",
+    "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-gradient-buttons": "^2.0.1",
     "react-native-image-swiper": "0.0.8",
@@ -54,7 +54,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-scrollable-tab-view": "^1.0.0",
-    "react-native-svg": "^12.0.3",
+    "react-native-svg": "9.13.3",
     "react-native-svg-charts": "^5.4.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-view-more-text": "^2.1.0",
