--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.25.3",
     "moment-range": "^4.0.2",
     "node-fetch": "^2.6.0",
+    "opencage-api-client": "^0.7.1",
     "pg": "^8.0.3",
     "radians": "^1.0.0"
   },
