--- a/Client/app.json
+++ b/Client/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "SimpliifyTest",
-    "slug": "simpliifytest",
+    "name": "Simpliify",
+    "slug": "simpliify",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "facebookAppId": "786955858495098",
